# kitabi.in

./: .gitignore  CLAUDE.md  README.md  STATUS.md  feature-map.md  index.html
admin/: .dockerignore  Dockerfile  README.md  pyproject.toml  railway.json  requirements.txt
admin/console/: bootstrap.py  config.py  deps.py  emails.py  flash.py  mail.py  main.py  models_ref.py  queries.py  security.py  templating.py
admin/console/routers/: account.py  admins.py  audit.py  auth.py  catalog.py  claims.py  dashboard.py  edits.py  readers.py  reports.py  search.py
admin/console/static/: admin.css  admin.js
admin/console/templates/: 404.html  _otp_boxes.html  _search_results.html  base.html  (+28 more)
admin/scripts/: seed_super_admin.py
admin/tests/: test_emails.py  test_mail.py  test_security.py
api/: .env.example  Dockerfile  README.md  alembic.ini  compose.yaml  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt
api/alembic/: env.py
api/app/: main.py
api/scripts/: backfill_covers.py  gen_apple_secret.py  kerala_seed.py  kerala_seed_images.py  seed_catalog.py
api/tests/: conftest.py  test_auth.py  test_author_claims.py  test_author_claims_inbox.py  test_author_public.py  test_catalog.py  test_connections.py  test_devices.py  test_extraction.py  test_fuzzy_search.py  test_health.py  test_import.py  test_lend_backfill.py  test_lend_mirror.py  test_lend_sync_e2e.py  test_malayalam_script.py  test_me.py  test_merge_works.py  test_public_profile.py  test_public_reviews.py  test_recommendations.py  test_search_fold.py  test_similar_works.py  test_sitemap.py  test_suspension.py  test_sync.py  test_translit_search.py  test_version_gate.py  test_work_revisions.py
(+314 files in other folders)
