[project]
name = "kitabi-admin"
version = "0.1.0"
description = "Kitabi admin console — back office at admin.kitabi.in"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.ruff.lint.per-file-ignores]
# Email bodies are table-layout HTML with inline styles — the lines are long by
# nature and don't wrap without corrupting the markup.
"console/emails.py" = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]
# emails.py holds long inline-style HTML strings black shouldn't try to reflow.
force-exclude = "console/emails.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
